--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     </head>
     <body id="sky" class="day">
         <div id="orb" class="sun">
-            
+            <div id="moonspot1" class="visible"></div>
+            <div id="moonspot2" class="visible"></div>
+            <div id="moonspot3" class="visible"></div>
         </div>
     
     </body>
